--- a/package.json
+++ b/package.json
@@ -9,17 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@ethersproject/abstract-provider": "^5.7.0",
+    "@google-cloud/storage": "^6.11.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1394.0",
+    "dotenv": "^16.1.4",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "ethers": "5.7.0",
+    "framer-motion": "^10.11.2",
+    "fs": "^0.0.1-security",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-date-picker": "^10.2.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.7",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "tsc-alias": "^1.8.6",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "browser": {
+    "crypto": false
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.13",
+    "@types/react-datepicker": "^4.11.2",
+    "chai": "^4.3.7",
+    "hardhat": "^2.14.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
